fix center-align images in desktop

--- a/docroot/themes/custom/ucsf/scss/components/_align-media.scss
+++ b/docroot/themes/custom/ucsf/scss/components/_align-media.scss
@@ -203,6 +203,7 @@ $align-directions: left, right;
   margin-bottom: $space-seven;
 
   @include breakpoint($new-small) {
+    width: initial;
     margin-top: $space-ten;
     margin-bottom: $space-ten;
   }
